# job-board

./: .env.example  .gitignore  .railwayignore  CLAUDE.md  README.md  job-tracker-prd.md  pyproject.toml  railway.discovery.json  railway.json  railway.reviewer-worker.json  railway.spend-alert.json  requirements.txt  schema.sql  targets.json
company_discovery/: __main__.py  config.py  dataset.py  db.py  enrich.py  enrich_apply.py  enrich_backfill.py  jobs_db.py  llm.py  name_backfill.py  profile.py  reclassify.py  run.py  schemas.py  serp.py  worker.py
dashboard/: .env.example  .gitignore  CLAUDE.md  eslint.config.mjs  instrumentation.node.ts  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  proxy.ts  tsconfig.json  vitest.config.ts
discovery/: __main__.py  config.py  dataset.py  db.py  llm.py  run.py
docs/: ui-contracts.md
job_discovery/: __main__.py  backfill_descriptions.py  db.py  gazetteer.py  http.py  jd.py  location_backfill.py  location_llm.py  locations.py  models.py  normalize.py  prefs_backfill.py  prune.py  run.py  targets.py
migrations/: 2026-06-24-reviews.sql  2026-06-25-model-selection.sql  2026-06-25-preferred-locations.sql  2026-06-26-company-discovery.sql  2026-06-26-rls-deny-all-policies.sql  2026-06-26-rolefit-fields.sql  2026-06-28-job-data-pruning.sql  2026-06-28-job-human-override.sql  2026-06-29-analytics-jobs-closed-at-index.sql  2026-06-29-board-filters.sql  2026-06-30-additional-ats-providers.sql  2026-06-30-application-details.sql  2026-06-30-application-packages.sql  (+31 more)
(+735 files in other folders)
