[project]
name = "job-board-poller"
version = "0.1.0"
description = "Remote job tracker poller"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require TEST_DATABASE_URL (a throwaway Postgres)",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["poller", "poller.adapters"]
