[project]
name = "job-board-poller"
version = "0.1.0"
description = "Remote job tracker"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "requests>=2.31",
    "psycopg[binary]>=3.2",
    "openai>=1.50.0",
    "geonamescache>=3.0",
    "langfuse>=3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff==0.15.20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require TEST_DATABASE_URL (a throwaway Postgres)",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["job_discovery", "job_discovery.adapters", "reviewer", "company_discovery", "observability"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally import after module-level env/stub setup.
"tests/*" = ["E402"]
